# docs/swagger.json
@@ -66,7 +66,7 @@
                 }
             }
         },
-        "/api/v1/bcs/points": {
+        "/api/v1/bcs/points/{number}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -78,6 +78,16 @@
                     "区块链监控"
                 ],
                 "summary": "查询所有采集点及其信息数量",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "查询限制返回的数量",
+                        "name": "number",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -515,6 +525,39 @@
                 }
             }
         },
+        "/api/v1/user/list": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户管理"
+                ],
+                "summary": "已注册的用户列表",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/user/login": {
             "post": {
                 "consumes": [
@@ -529,7 +572,7 @@
                 "summary": "用户登录",
                 "parameters": [
                     {
-                        "description": "用户名、密码",
+                        "description": "用户名、密码,admin是默认的管理员账号",
                         "name": "account",
                         "in": "body",
                         "required": true,
@@ -782,6 +825,11 @@
         },
         "/api/v1/user/revoke": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -791,7 +839,7 @@
                 "tags": [
                     "用户管理"
                 ],
-                "summary": "用户注销",
+                "summary": "注销用户",
                 "parameters": [
                     {
                         "description": "注销",
@@ -912,14 +960,14 @@
             "type": "object",
             "properties": {
                 "password": {
-                    "description": "登录密码",
+                    "description": "登录密码(管理员)",
                     "type": "string",
-                    "example": "1234"
+                    "example": "lzawt_admin"
                 },
                 "user_name": {
-                    "description": "登录邮箱",
+                    "description": "登录用户名",
                     "type": "string",
-                    "example": "teddy"
+                    "example": "admin"
                 }
             }
         },
@@ -1037,17 +1085,27 @@
         "schema.FarmSwag": {
             "type": "object",
             "properties": {
+                "book_mark": {
+                    "description": "书签bookmark",
+                    "type": "string",
+                    "example": "f~admin~1594382265"
+                },
                 "end_time": {
                     "type": "string",
                     "example": "9999999999"
                 },
-                "point": {
+                "page_size": {
+                    "description": "页大小",
                     "type": "string",
-                    "example": "teddy"
+                    "example": "10"
                 },
                 "star_time": {
                     "type": "string",
                     "example": "1594382265"
+                },
+                "user": {
+                    "type": "string",
+                    "example": "admin"
                 }
             }
         },
@@ -1069,9 +1127,19 @@
         "schema.PicSwag": {
             "type": "object",
             "properties": {
+                "book_mark": {
+                    "description": "书签bookmark",
+                    "type": "string",
+                    "example": "p~0018DE743E31~1594382265"
+                },
                 "end_time": {
                     "type": "string",
                     "example": "1595382265"
+                },
+                "page_size": {
+                    "description": "页大小",
+                    "type": "string",
+                    "example": "10"
                 },
                 "point": {
                     "type": "string",
@@ -1113,6 +1181,11 @@
                     "type": "string",
                     "example": "1234"
                 },
+                "role": {
+                    "description": "用户角色   //0:管理员,1：普通员工",
+                    "type": "string",
+                    "example": "1"
+                },
                 "username": {
                     "description": "用户名",
                     "type": "string",
@@ -1123,26 +1196,38 @@
         "schema.RevokeSwag": {
             "type": "object",
             "properties": {
-                "identity": {
-                    "type": "string",
-                    "example": "4522261111111111"
-                },
                 "user_name": {
-                    "type": "string",
-                    "example": "teddy"
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "teddy",
+                        "teddy1"
+                    ]
                 }
             }
         },
         "schema.SensorSwag": {
             "type": "object",
             "properties": {
+                "book_mark": {
+                    "description": "书签bookmark",
+                    "type": "string",
+                    "example": "s~19372180~1594382265"
+                },
                 "end_time": {
                     "type": "string",
                     "example": "1595382265"
                 },
+                "page_size": {
+                    "description": "页大小",
+                    "type": "string",
+                    "example": "10"
+                },
                 "point": {
                     "type": "string",
-                    "example": "0018DE743E31"
+                    "example": "19372180"
                 },
                 "star_time": {
                     "type": "string",
